--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-body {background-color: red;}
+body {background-color: rgb(87, 16, 16);}
 
 .center {
+    margin: auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    margin: 100px;
+  }
+
+  div{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+
   }
